--- a/packages/elements-core/package.json
+++ b/packages/elements-core/package.json
@@ -33,7 +33,7 @@
     "build": "yarn build.react",
     "postbuild": "yarn build.styles",
     "build.react": "sl-scripts bundle",
-    "build.styles": "postcss src/styles.css -o dist/styles.min.css && cp src/core.css dist",
+    "build.styles": "postcss src/styles.css -o dist/styles.min.css && copy src/core.css dist",
     "build.docs": "build-storybook -o dist-storybook",
     "commit": "git-cz",
     "release": "sl-scripts release",
@@ -121,5 +121,5 @@
   "release": {
     "extends": "@stoplight/scripts/release"
   },
-  "gitHead": "68df0b8b7c8b2f954c99af7ff0363d13bd146197"
+  "gitHead": "d2c4090879e70b03690ac424bd55b28ff139da17"
 }
